Changelog
=========

2.1.16 (unreleased)
-------------------

Incompatibilities:

- *add item here*

New:

- *add item here*

Fixes:

- *add item here*


2.1.15 (2016-03-11)
-------------------

Fixes:

- Setted lock timeout to MAX_TIMEOUT to avoid baseline unwanted unlock after 10 minutes (closes `#1451`_).
  [parruc, rodfersou]


2.1.14 (2015-11-16)
-------------------

Fixes:

- Keep the default page setting when checking in a document.
  [maurits]


2.1.13 (2014-04-16)
-------------------

- Fix tests to work with auto csrf.
  [vangheem]

- Fix tests for latest plone.protect.
  [vangheem]


2.1.12 (2014-02-19)
-------------------

- Information messages can be hidden from user who checked out content when
  using a placeful workflow, see: https://dev.plone.org/ticket/13852
  [anthonygerrard]

- Replaced the "Locked" label with "Warning"
  [rristow]


2.1.11 (2014-01-27)
-------------------

- Nothing changed yet.


2.1.10 (2013-03-05)
-------------------

- Fixed error on checking in the working copy of an object linked in it's
  parent rich text field, see: https://dev.plone.org/ticket/13462
  [radekj]


2.1.9 (2013-01-13)
------------------

- Nothing changed yet.


2.1.8 (2012-10-03)
------------------

- Unmark both the baseline and the working copy on checkin so that dexterity
  content is properly unmarked.
  [cewing]


2.1.7 (2012-08-04)
------------------

- Allow browser view templates to be defined and thus overridden in ZCML.
  [rpatterson]


2.1.6 (2012-06-29)
------------------

- Import events from zope.lifecycleevent.
  [hannosch]

- Fix permissions check in parent folder working copy locator.
  [mitchellrj]


2.1.5 (2012-03-16)
------------------

- Don't declare IIterateAware as an extension of Archetypes' IReferenceable,
  because there are other implementations (such as the one for Dexterity)
  that don't use Archetypes references.
  [davisagli]

- Make sure permissions of working copy workflow get applied when checking